--- a/akka/src/main/resources/www/views/results.html
+++ b/akka/src/main/resources/www/views/results.html
@@ -18,14 +18,14 @@
             <thead>
             <tr>
                 <th>Rank</th>
-                <th>Email</th>
+                <th>Name</th>
                 <th>Score</th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="result in results | orderBy: 'score'">
+            <tr ng-repeat="result in leaderBoard | orderBy: 'score'">
                 <td>{{ $index + 1 }}</td>
-                <td class="truncated">{{ result.email }}</td>
+                <td class="truncated">{{ result.name }}</td>
                 <td>{{ result.score }}</td>
             </tr>
             </tbody>
