--- a/akka/src/main/resources/www/views/heading.html
+++ b/akka/src/main/resources/www/views/heading.html
@@ -2,6 +2,6 @@
     <img src="http://www.techweekeurope.co.uk/wp-content/uploads/2015/02/Sky-logo-600x374.png" width="75%">
 </p>
 <p>
-    <h1>Web client for pi4j-client</h1>
+<h1>Scala Exchange 2015 LONDON</h1>
 </p>
-<p class="lead">This message is some bla bla for now.</p>
+<p class="lead">Are you faster than light? Sure?</p>
