--- a/akka/src/main/resources/www/views/results.html
+++ b/akka/src/main/resources/www/views/results.html
@@ -26,7 +26,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="result in leaderBoard | orderBy:'score'">
+            <tr ng-repeat="result in leaderBoard | orderBy:'-score'">
                 <td>{{ $index + 1 }}</td>
                 <td class="truncated">{{ result.name }}</td>
                 <td>{{ result.score }}</td>
