--- a/actor/src/main/resources/www/views/start.html
+++ b/actor/src/main/resources/www/views/start.html
@@ -14,9 +14,9 @@
 
         <form ng-submit="register()">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Name"
+                <input type="text" class="form-control" placeholder="NickName"
                        ng-disabled="disableRegistration();"
-                       ng-model="user.name"
+                       ng-model="user.nickName"
                        required>
             </div>
             <div class="form-group">
