--- a/actor/src/main/resources/www/views/heading.html
+++ b/actor/src/main/resources/www/views/heading.html
@@ -21,7 +21,7 @@
     <img src="http://www.techweekeurope.co.uk/wp-content/uploads/2015/02/Sky-logo-600x374.png" width="75%">
 </p>
 <p>
-    <h1>Scala Exchange 2015 LONDON</h1>
+    <h1>Scala eXchange 2015, London</h1>
 </p>
 <p class="lead">Are you faster than light? Sure?</p>
 <p class="lead" ng-show="showCurrentResult();">{{ currentResult.nickName }} achieved {{ currentResult.score }} points... Congrats!</p>
