The leaderboard should present a single best score for a single user, close #13

--- a/actor/src/main/resources/www/views/results.html
+++ b/actor/src/main/resources/www/views/results.html
@@ -20,10 +20,10 @@
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>Rank</th>
-                <th>Nick Name</th>
-                <th>Score</th>
-                <th>Tries</th>
+                <th width="15%">Rank</th>
+                <th width="40%">Nick Name</th>
+                <th width="30%">Score</th>
+                <th width="15%">Tries</th>
             </tr>
             </thead>
             <tbody>
