add emotions to score ranges

--- a/actor/src/main/resources/www/views/heading.html
+++ b/actor/src/main/resources/www/views/heading.html
@@ -24,4 +24,4 @@
     <h1>Scala eXchange 2015, London</h1>
 </p>
 <p class="lead">Are you faster than light? Sure?</p>
-<p class="lead" ng-show="showCurrentResult();">{{ currentResult.nickName }} achieved {{ currentResult.score }} points... Congrats!</p>
+<p class="lead" ng-show="showCurrentResult();">{{ currentResult.nickName }} achieved {{ currentResult.score }} points... {{ emotion() }}</p>
